2002-03-21  Albert Chin-A-Young  <china@thewrittenword.com>

	* genscripts.sh (LIB_SEARCH_DIRS): Quote path.

2002-03-20  Alan Modra  <amodra@bigpond.net.au>

	* ldlang.c (ldlang_add_undef): If the output bfd has been opened,
	add the symbol to the linker hash table immediately.
	(lang_place_undefineds): Split symbol creation out..
	(insert_undefined): ..to here.

2002-03-18  David O'Brien  <obrien@FreeBSD.org>

	* emultempl/elf32.em: Use lbasename vs. basename to fix problem where
	the contents of the buffer returned from basename function will are
	getting overwritten while still being used.

Mon Mar 18 17:38:39 CET 2002  Jan Hubicka  <jh@suse.cz>
			      Andreas Jaeger  <aj@suse.de>
			      Andreas Schwab  <schwab@suse.de>

	* configure.tgt (x86_64-*-linux-gnu*): Configure i386 as native.
	* elf_x86_64.sh (ARCH): Set to i386:x86-64
	set libraries to default to lib64 paths.

2002-03-18  Tom Rix  <trix@redhat.com>

	* Makefile.am : Add eaix5ppc and eaix5rs6, AIX 5 support.
	* configure.tgt : Same.
	* emulparms/aix5ppc.sh : New file. For eaix5ppc.
	* emulparms/aix5rs6.sh : New file. For eaix5rs6.
	* emulparms/aixppc.sh : OUPUT_FORMAT_32BIT and OUTPUT_FORMAT_64BIT
	emulation parameters for better -b32, -b64 support.
	* emulparms/aixrs6.sh : Same.
	* emulparms/ppcmacos.sh : Same.
	* emultempl/aix.em (choose_target) : Use new emulation parameters
	OUTPUT_FORMAT_32BIT and OUTPUT_FORMAT_64BIT.
	* Makefile.in : Regenerate.

2002-03-18  Nick Clifton  <nickc@cambridge.redhat.com>

	* po/fr.po: Updated version.

2002-03-18  Alan Modra  <amodra@bigpond.net.au>

	* ldmain.c (main): Move .text readonly flag fudges from here..
	* ldlang.c (lang_process): ..to here.

2002-03-14  Alan Modra  <amodra@bigpond.net.au>

	* ldlang.c (lang_check): Remove the word size check added in last
	change.  Treat emitrelocations case as for relocatable links.

2002-03-13  Nick Clifton  <nickc@cambridge.redhat.com>

	* po/fr.po: Updated version.

2002-03-13  Alan Modra  <amodra@bigpond.net.au>
